# ShaderConverter

./: .gitignore  LICENSE  README.md  ShaderConverterPlan.md  documentation.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
engine/: Cargo.toml
engine/src/: lib.rs
scripts/: build-wasm.sh
src/: App.tsx  vite-env.d.ts
src/components/: CodeEditor.tsx  ShaderPreview.tsx  Sidebar.tsx
src/data/: shaderLibrary.ts
src/hooks/: useWasm.ts
src/services/: urlService.ts
