[package]
name = "shader-converter-engine"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
naga = { version = "0.19", features = ["glsl-in", "glsl-out", "wgsl-in", "wgsl-out", "hlsl-out", "msl-out", "spv-out"] }
